Finished making entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=flashcards-api
-# Database Configuration
-
+# Database Config
+spring.datasource.url=jdbc:postgresql://localhost:5432/flashcards_db
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
