Enviroment variables added

--- a/flashcards-api/src/main/resources/application.properties
+++ b/flashcards-api/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.application.name=flashcards-api
 # Database Config
-spring.datasource.url=jdbc:postgresql://localhost:5432/flashcards_db
-spring.datasource.username=postgres
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/flashcards_api_db
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 # Jpa / hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
